# haskell-wayland

./: .gitignore  LICENSE  geninterface.hs  stack.yaml  test.hs  wayland.cabal
cbits/: socket.c
parse/: parse.hs  test.xml
src/Graphics/Wayland/: Client.hs  Connection.hs  Internal.hsc  Marshal.hs  MarshalOld.hs  Object.hs  Registry.hs  Server.hs  Wayland.hs  XML.hs
src/Graphics/Wayland/Internal/: Connection.hs  Dynamic.hs  Marshal.hs  Object.hs  Registry.hs  Socket.hsc
src/Graphics/Wayland/Server/: Client.hs  Client.hsc  Compositor.hsc  Display.hsc  EventLoop.hs  Example.hs  Global.hsc  Internal.hs  Main.hs  Monad.hs  OldEventLoop.hs  Region.hsc  Resource.hsc  Shm.hsc  Surface.hsc  Types.hs
src/Graphics/Wayland/Server/Monad/: State.hs
src/Graphics/Wayland/Server/Protocol/: Example.hs
src/Graphics/Wayland/System/: Epoll.hsc  Socket.hsc
temp/: Main  Main.hi  Main.hs
