name:                wayland
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wayland#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Wayland.Server
                       Graphics.Wayland.Internal.Socket
                       Graphics.Wayland.Internal.Connection
                       Graphics.Wayland.Internal.Registry
                       Graphics.Wayland.Internal.Marshal
                       Graphics.Wayland.Server.EventLoop
                       Graphics.Wayland.Server.Monad
                       Graphics.Wayland.Server.Monad.State
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5 && < 1
                     , transformers >= 0.5 && < 1
                     , mtl >= 2 && < 3
                     , lens >= 4 && < 5
                     , bytestring >= 0.10 && < 1
                     , vector >= 0.11 && < 1
                     , spool < 1
                     -- , text >= 1 && < 2
                     , unix >= 2.7 && < 3
                     , network >= 2.6 && < 3
                     , epoll >= 0.2.3 && < 1
  ghc-options:         -Wall
  default-language:    Haskell2010
  c-sources:           cbits/socket.c

test-suite wayland-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wayland
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wayland
