name:                wayland
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wayland#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Wayland.XML
                       Graphics.Wayland.Server
                       Graphics.Wayland.Object
                       Graphics.Wayland.Marshal
                       Graphics.Wayland.Registry
                       Graphics.Wayland.Connection
--                       Graphics.Wayland.Server.Monad
--                       Graphics.Wayland.Server.EventLoop
                       Graphics.Wayland.Server.Client
  other-modules:       Graphics.Wayland.System.Epoll
                       Graphics.Wayland.System.Socket
  build-depends:       base >= 4.9 && < 5
                     , primitive
                     , deepseq
                     , exceptions >= 0.8 && < 1
                     , transformers >= 0.5 && < 1
                     , mtl >= 2 && < 3
                     , lens >= 4 && < 5
                     , bytestring >= 0.10 && < 1
                     , vector >= 0.11 && < 1
                     , spool
                     , utf8-string > 1 && < 2
                     , containers >= 0.5 && < 1
                     , unordered-containers >= 0.2 && < 1
                     , hashable
                     , hashtables >= 1.2 && < 2
                     --, primitive
                     , unix >= 2.7 && < 3
                     , network >= 2.6 && < 3
                     -- for code generators:
                     , hxt, hxt-xpath, split
  ghc-options:         -Wall
  default-language:    Haskell2010
  c-sources:           cbits/socket.c

test-suite wayland-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wayland
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wayland
